apps/prod2/cache/ats/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps # for compatibility with task configuration in pingkai CI
