apps/prod2/cache/ats/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ats
  namespace: apps
spec:
  parentRefs:
    - kind: Gateway
      name: internal-gateway
      namespace: infra
  hostnames:
    - ats.internal.pingcap.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ats
          port: 80
